src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__numeric__floor_numeric.snap
---
source: src/expr/src/scalar/func/impls/numeric.rs
expression: "#[sqlfunc(sqlname = \"floornumeric\", is_monotone = true)]\nfn floor_numeric(mut a: Numeric) -> Numeric {\n    if a.exponent() >= 0 {\n        return a;\n    }\n    let mut cx = numeric::cx_datum();\n    cx.set_rounding(Rounding::Floor);\n    cx.round(&mut a);\n    numeric::munge_numeric(&mut a).unwrap();\n    a\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct FloorNumeric;
impl crate::func::EagerUnaryFunc for FloorNumeric {
    type Input<'a> = Numeric;
    type Output<'a> = Numeric;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        floor_numeric(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn is_monotone(&self) -> bool {
        true
    }
}
impl std::fmt::Display for FloorNumeric {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("floornumeric")
    }
}
fn floor_numeric(mut a: Numeric) -> Numeric {
    if a.exponent() >= 0 {
        return a;
    }
    let mut cx = numeric::cx_datum();
    cx.set_rounding(Rounding::Floor);
    cx.round(&mut a);
    numeric::munge_numeric(&mut a).unwrap();
    a
}
